samples/_failures_safe/1761251459_dcca37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa1c33aa.c: In function ‘main’:
./samples/SAFE/__tmp_fa1c33aa.c:174:5: error: expected declaration or statement at end of input
  174 |     printf("Enter expression to tokenize: ");
      |     ^~~~~~
